--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
 
     <groupId>org.opencdmp</groupId>
     <artifactId>repository-deposit-parent</artifactId>
-	<version>${revision}</version>
-    <packaging>pom</packaging>
+	<version>1.0.0-SNAPSHOT</version>
+	<packaging>pom</packaging>
 
 	<properties>
 		<maven.compiler.source>21</maven.compiler.source>
@@ -20,7 +20,6 @@
 		<java.version>21</java.version>
 		<log4j.version>1.2.17</log4j.version>
 		<log4j2.version>2.15.0</log4j2.version>
-		<revision>1.0.0-SNAPSHOT</revision>
 	</properties>
 
     <modules>
