--- a/web/pom.xml
+++ b/web/pom.xml
@@ -5,20 +5,19 @@
     <parent>
         <groupId>org.opencdmp</groupId>
         <artifactId>repository-deposit-parent</artifactId>
-        <version>${revision}</version>
+		<version>1.0.0-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
     </parent>
 
 	<artifactId>repository-deposit-web</artifactId>
-	<version>${revision}</version>
-    <packaging>jar</packaging>
+	<version>1.0.0-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
 	<properties>
 		<maven.compiler.source>21</maven.compiler.source>
 		<maven.compiler.target>21</maven.compiler.target>
 		<maven.compiler.release>21</maven.compiler.release>
 		<java.version>21</java.version>
-		<revision>1.0.0-SNAPSHOT</revision>
 	</properties>
 
     <dependencies>
@@ -48,7 +47,7 @@
 		<dependency>
 			<groupId>org.opencdmp</groupId>
 			<artifactId>repository-deposit-zenodo</artifactId>
-			<version>${revision}</version>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
