--- a/web/src/main/resources/config/application.yml
+++ b/web/src/main/resources/config/application.yml
@@ -2,7 +2,7 @@ spring:
   jackson:
     default-property-inclusion: non_null
   config:
-    import: optional:classpath:config/app.env[.properties], optional:file:../config/app.env[.properties],
+    import: optional:classpath:config/app.env[.properties], optional:classpath:config/app-${spring.profiles.active}.env[.properties], optional:file:../config/app.env[.properties], optional:file:../config/app-${spring.profiles.active}.env[.properties],
       optional:classpath:config/server.yml[.yml], optional:classpath:config/server-${spring.profiles.active}.yml[.yml], optional:file:../config/server-${spring.profiles.active}.yml[.yml],
       optional:classpath:config/logging.yml[.yml], optional:classpath:config/logging-${spring.profiles.active}.yml[.yml], optional:file:../config/logging-${spring.profiles.active}.yml[.yml],
       optional:classpath:config/zenodo.yml[.yml], optional:classpath:config/zenodo-${spring.profiles.active}.yml[.yml], optional:file:../config/zenodo-${spring.profiles.active}.yml[.yml],
