--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.2</version>
+		<version>3.4.5</version>
     </parent>
 
     <groupId>org.opencdmp</groupId>
@@ -30,7 +30,7 @@
 		<dependency>
 			<groupId>org.opencdmp</groupId>
 			<artifactId>repository-deposit-base</artifactId>
-			<version>1.1.0</version>
+			<version>1.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>gr.cite</groupId>
@@ -41,6 +41,11 @@
 			<groupId>gr.cite</groupId>
 			<artifactId>exceptions</artifactId>
 			<version>2.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.ibm.icu</groupId>
+			<artifactId>icu4j</artifactId>
+			<version>74.2</version>
 		</dependency>
 	</dependencies>
 </project>
