added actuator endpoints

--- a/web/src/main/resources/config/security.yml
+++ b/web/src/main/resources/config/security.yml
@@ -2,7 +2,7 @@ web:
   security:
     enabled: true
     authorized-endpoints: [ api ]
-    allowed-endpoints: [ health ]
+    allowed-endpoints: [ actuator ]
     idp:
       api-key:
         enabled: false
