--- a/web/pom.xml
+++ b/web/pom.xml
@@ -45,6 +45,14 @@
 			<artifactId>spring-boot-starter-cache</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.opencdmp</groupId>
 			<artifactId>repository-deposit-zenodo</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
