--- a/web/src/main/resources/config/application.yml
+++ b/web/src/main/resources/config/application.yml
@@ -12,5 +12,6 @@ spring:
       optional:classpath:config/security.yml[.yml], optional:classpath:config/security-${spring.profiles.active}.yml[.yml], optional:file:../config/security-${spring.profiles.active}.yml[.yml],
       optional:classpath:config/cache.yml[.yml], optional:classpath:config/cache-${spring.profiles.active}.yml[.yml], optional:file:../config/cache-${spring.profiles.active}.yml[.yml],
       optional:classpath:config/idpclaims.yml[.yml], optional:classpath:config/idpclaims-${spring.profiles.active}.yml[.yml], optional:file:../config/idpclaims-${spring.profiles.active}.yml[.yml],
-      optional:classpath:config/programming-languages.yml[.yml], optional:classpath:config/programming-languages-${spring.profiles.active}.yml[.yml], optional:file:../config/programming-languages-${spring.profiles.active}.yml[.yml]
+      optional:classpath:config/programming-languages.yml[.yml], optional:classpath:config/programming-languages-${spring.profiles.active}.yml[.yml], optional:file:../config/programming-languages-${spring.profiles.active}.yml[.yml],
+      optional:classpath:config/management.yml[.yml], optional:classpath:config/management-${spring.profiles.active}.yml[.yml], optional:file:../config/management-${spring.profiles.active}.yml[.yml]
 
